{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 35,
  "lineage": "ea868661-69d4-59cd-262a-4669923d1ed4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "ayush-terraform-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "id": "ayush-terraform-elb",
            "instances": [
              "i-0ec70569c99d00418"
            ],
            "listener": [
              {
                "instance_port": 8000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "ayush-terraform-elb",
            "security_groups": [
              "sg-0ef425587c47c3d36"
            ],
            "subnets": [
              "subnet-0a84de9c1eaa6e9ab"
            ],
            "tags": {
              "Name": "ayush-terraform-elb"
            }
          },
          "dependencies": [
            "aws_instance.web-1",
            "aws_security_group.ayushweb",
            "aws_subnet.ayush-public-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf54a87bffe628d2",
            "arn": "arn:aws:ec2:ap-northeast-1:415830525771:instance/i-0ec70569c99d00418",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ec70569c99d00418",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0e6d3d7324bb53fa9",
            "private_dns": "ip-10-0-1-232.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.232",
            "public_dns": "ec2-54-95-27-202.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.95.27.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f06ce196b99fa356",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a84de9c1eaa6e9ab",
            "tags": {
              "Name": "Ayush Apache 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ef425587c47c3d36"
            ]
          },
          "dependencies": [
            "aws_security_group.ayushweb",
            "aws_subnet.ayush-public-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ayushigw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-068e51ab494b9193c",
            "owner_id": "415830525771",
            "tags": {
              "Name": "Ayush IgW"
            },
            "vpc_id": "vpc-030139aed71a105d8"
          },
          "dependencies": [
            "aws_vpc.AyushVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ayush-public-RT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0009ace73e635b64c",
            "owner_id": "415830525771",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-068e51ab494b9193c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Ayush Public RT"
            },
            "vpc_id": "vpc-030139aed71a105d8"
          },
          "dependencies": [
            "aws_internet_gateway.ayushigw",
            "aws_vpc.AyushVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ayush-public-RT-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00043e6e127899e24",
            "route_table_id": "rtb-0009ace73e635b64c",
            "subnet_id": "subnet-0a84de9c1eaa6e9ab"
          },
          "dependencies": [
            "aws_route_table.ayush-public-RT",
            "aws_subnet.ayush-public-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ayushweb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:415830525771:security-group/sg-0ef425587c47c3d36",
            "description": "Accept incoming connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0ef425587c47c3d36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_web",
            "name_prefix": null,
            "owner_id": "415830525771",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebServerSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-030139aed71a105d8"
          },
          "dependencies": [
            "aws_vpc.AyushVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ayush-public-terraform",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:415830525771:subnet/subnet-0a84de9c1eaa6e9ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a84de9c1eaa6e9ab",
            "map_public_ip_on_launch": false,
            "owner_id": "415830525771",
            "tags": {
              "Name": "ayush-public-terraform"
            },
            "vpc_id": "vpc-030139aed71a105d8"
          },
          "dependencies": [
            "aws_vpc.AyushVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "AyushVPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:415830525771:vpc/vpc-030139aed71a105d8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08bdbee4b2fc7e85d",
            "default_route_table_id": "rtb-0f150d23bd981cf01",
            "default_security_group_id": "sg-0629732a760dcecf1",
            "dhcp_options_id": "dopt-06427e63",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-030139aed71a105d8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f150d23bd981cf01",
            "owner_id": "415830525771",
            "tags": {
              "Name": "AyushTerraformVPC"
            }
          }
        }
      ]
    }
  ]
}